--- a/calltrace/index.html
+++ b/calltrace/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Alcatel-Lucent IMS Lab Call Trace Tool</title>
+    <title>ALU IMS Lab Call Trace Tool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Call Trace">
     <meta name="author" content="Calvin Zhang">
@@ -11,8 +11,7 @@
     <style type="text/css">
         body { padding-top: 60px; padding-bottom: 40px; }
         .sidebar-nav { padding: 9px 0; }
-        .row-fluid { padding-top: 10px; padding-left: 80px; }
-
+        .span9 { padding-top: 10px; padding-left: 80px; }
         .ct-button { width: 70px; height: 20px; margin-top: 0; margin-bottom: 0; }
         #dialog-form form fieldset label, #dialog-form form fieldset input { display: block; }
         #dialog-form form fieldset input.text { margin-bottom: 12px; width: 95%; padding: .4em; }
