--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             background-color: #fff;
             background-image: url(assets/lib/twitter-bootstrap-v2.0.4/img/grid-18px-masked.png);
             background-repeat: repeat-x;
-            background-position: 0 40px;
         }
     </style>
   </head>
@@ -24,7 +23,12 @@
   <span class="span10" style="text-align: center; width: 100%;">
       <div class="inner">
           <h1>Calvin's personal page</h1>
-          <p style="font-size: 16px; padding-top: 10px;">Contact me: <a href="mailto:sanping.zhang@alcatel-lucent.com">Sanping.Zhang@alcatel-lucent.com</a>, my blog: <a href="www.mceiba.com">www.mceiba.com</a>.</p>
+          <p style="font-size: 16px; padding-top: 10px;">Contact me: <a href="mailto:sanping.zhang@alcatel-lucent.com">Sanping.Zhang@alcatel-lucent.com</a>, Blog: <a href="http://www.mceiba.com">www.mceiba.com</a>.</p>
+          <hr>
+          <p class="download-info">
+              <a href="calltrace/index.html" class="btn btn-primary btn-large" style="width:200px;">IMS Call Trace <small>(v1.0)</small></a>
+              <a href="command/index.html" class="btn btn-large" style="width:200px;">ALU Command Assistant <small>(v2.0)</small></a>
+          </p>
       </div>
   </span>
   </body>
