--- a/calltrace/index.html
+++ b/calltrace/index.html
@@ -66,7 +66,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    //start_call.check();
+    start_call.check();
 </script>
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
@@ -100,7 +100,7 @@
     </div>
 </div>
 
-<div class="container-fluid" id="main-tab" style="display: block;">
+<div class="container-fluid" id="main-tab" style="display: none;">
     <div class="row-fluid">
         <div class="span9">
             <form class="form-horizontal" id="start_form">
