update main page

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   </head>
 
   <body>
-  <span class="span10" style="text-align: center; width: 100%;">
+  <span class="span12 row-fluid" style="text-align: center;margin-left:0">
       <div class="inner">
           <h1>Calvin's personal page</h1>
           <p style="font-size: 16px; padding-top: 10px;">Contact me: <a href="mailto:sanping.zhang@alcatel-lucent.com">Sanping.Zhang@alcatel-lucent.com</a>, Blog: <a href="http://www.mceiba.com">www.mceiba.com</a>.</p>
           <hr>
           <p class="download-info">
-              <a href="calltrace/index.html" class="btn btn-primary btn-large" style="width:200px;">IMS Call Trace <small>(v1.0)</small></a>
-              <a href="command/index.html" class="btn btn-large" style="width:200px;">ALU Command Assistant <small>(v2.0)</small></a>
+              <a href="multitrace/index.html" class="btn btn-primary btn-large" style="width:240px;">IMS Call Trace <small class="badge badge-info"> v2.0 </small></a>
+              <a href="command/index.html" class="btn btn-large" style="width:240px;">ALU Command Assistant <small class="badge badge-info"> v2.0 </small></a>
           </p>
       </div>
   </span>
