--- a/multitrace/index.html
+++ b/multitrace/index.html
@@ -27,6 +27,10 @@
         .marketing h3 { margin-bottom: 10px; font-size: 22px; }
         .marketing-byline { margin: 8px 0 20px; font-size: 24px; font-weight: 300; line-height: 24px; color: #999; text-align: center;}
         .ok-block { margin-left: 5px; width: 20px; text-align: center;}
+        #merge_bar { width: 75px; position: fixed; right: 0; top: 180px; overflow: hidden; z-index: 99999; padding: 0; margin: 0; font-size: 12px;}
+        #merge_bar form { padding-right: 2px; }
+        #merge_bar form input { width: auto; margin: 0; padding: 4px; max-width: 75px; max-height: 18px; }
+        #merge_bar form a { width: auto; margin: 0; font-size: 12px; padding: 4px;}
     </style>
     <link href="../assets/lib/twitter-bootstrap-v2.0.4/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/lib/jquery-ui-1.9.1.custom/css/redmond/jquery-ui-1.9.1.custom.min.css">
@@ -125,6 +129,13 @@
                                 address, required.</p>
                         </div>
                     </div>
+                    <div class="control-group" style="display: none;" id="cb_merge">
+                        <div class="controls">
+                            <label class="checkbox" style="font-size: 12px;font-weight: 500;">
+                                <input type="checkbox" name="merge" checked="checked"> Merge PCAP
+                            </label>
+                        </div>
+                    </div>
                     <div class="control-group">
                         <label class="control-label" for="select01">Trace Type</label>
 
@@ -215,6 +226,14 @@
                     </tbody>
                 </table>
             </form>
+
+            <div id="merge_bar" class="control-group">
+                <form class="navbar-form pull-left">
+                    <input type="text" class="span2">
+                    <a href="javascript:void(0)" class="btn">MergePCAP</a>
+                </form>
+            </div>
+
         </div>
     </div>
     <!--/span-->
@@ -298,6 +317,8 @@
         start_call.feedback();
         cz_event.init();
         cz_event.plus();
+        //cz_event.merge();
+        cz_event.sidebar();
     })
 </script>
 </body>
