--- a/multitrace/index.html
+++ b/multitrace/index.html
@@ -243,16 +243,13 @@
     <div class="row-fluid">
         <div class="span10 marketing">
             <h2>IMS Call Trace Management</h2>
-            <p class="marketing-byline">Version 1.0</p>
+            <p class="marketing-byline">Current Release: v2.0</p>
             <h3>Note</h3>
-            <ol>
+            <ul>
                 <li>
                     <p>The call trace web tool is only available from ISC22.1 (R26.12.01 and late release).</p>
                 </li>
-                <li>
-                    <p>If you download the PCAP files, IE or Firefox is recommended (Chrome doesn't support FTP).</p>
-                </li>
-            </ol>
+            </ul>
             <h3>Getting started</h3>
             <ol>
                 <li>
@@ -292,6 +289,19 @@
                 </li>
                 <li>
                     <p>Trace task can be restored when the web browser is re-opened again.</p>
+                </li>
+            </ol>
+
+            <h3>V2.0 Change log:</h3>
+            <ol>
+                <li>
+                    <p>Multiple IMS cards could be traced simultaneously.</p>
+                </li>
+                <li>
+                    <p>PCAP files can be downloaded from remote server instead of CNFG card.</p>
+                </li>
+                <li>
+                    <p>Multiple PCAP files could be merged and downloaded.</p>
                 </li>
             </ol>
         </div>
